[package]
name = "Scirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
tui-textarea = { version = "*", features = ["search"] }
crossterm = "0.25"
opener = "0.5.2"
dirs = "4.0.0"
regex = "1"
biblatex = "0.6"
